--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,9 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title>Title</title>
-        <script src="js/vue.js" />
+        <script src="js/vue.js"></script>
+        <script src="js/app.js"></script>
     </head>
-    <body>
+    <body onload="loadOmni()">
+
+        <div id="app">
+
+        </div>
 
     </body>
 </html>
